--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,18 +4,35 @@ plugins {
 
 android {
     namespace 'com.example.nephilos'
-    compileSdk 33
+    compileSdk 34
+    ndkVersion "26.3.11579264"
 
 
     defaultConfig {
         applicationId "com.example.nephilos"
         minSdk 21
-        targetSdk 32
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
+        ndk{
+            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+        }
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        externalNativeBuild {
+            cmake {
+                cppFlags ""
+            }
+        }
     }
+
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['src/main/jniLibs']
+        }
+    }
+
 
     buildTypes {
         release {
@@ -26,6 +43,12 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    externalNativeBuild {
+        cmake {
+            path file('src/main/cpp/CMakeLists.txt')
+            version '3.22.1'
+        }
     }
 }
 
