--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -4,11 +4,11 @@ project(arpspoof)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(arpspoof arpspoof.c)
+add_executable(arp_spoof arp_spoof.c)
 add_executable(fill_arp_table fill_arp_table.c)
 add_executable(get_interfaces get_interfaces.c)
 
-set_target_properties(arpspoof PROPERTIES
+set_target_properties(arp_spoof PROPERTIES
         LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/libs/${ANDROID_ABI}
         RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/libs/${ANDROID_ABI}
 )
@@ -22,10 +22,10 @@ set_target_properties(get_interfaces PROPERTIES
 )
 
 
-add_custom_command(TARGET arpspoof POST_BUILD
+add_custom_command(TARGET arp_spoof POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy
-        ${CMAKE_BINARY_DIR}/libs/${ANDROID_ABI}/arpspoof
-        ${CMAKE_SOURCE_DIR}/../jniLibs/${ANDROID_ABI}/libarpspoof.so
+        ${CMAKE_BINARY_DIR}/libs/${ANDROID_ABI}/arp_spoof
+        ${CMAKE_SOURCE_DIR}/../jniLibs/${ANDROID_ABI}/libarp_spoof.so
 )
 add_custom_command(TARGET fill_arp_table POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy
