--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
 
     <application
         android:extractNativeLibs="true"
+        android:usesCleartextTraffic="true"
 
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
